# Typeahead-search

./: Dockerfile  Justfile  README.md  docker-compose.yml  hadoop.env  pyproject.toml
app/: main.py
app/cassandra_utils/: connection.py  create_table.py  insert_words.py  models.py
app/hadoop/: __init__.py  word_counter_mr_job.py
app/hdfs_outputs/: part-r-00000
app/rabbitmq/: connection.py  constants.py  handler_ps.py
app/routes/: cassandra.py  main.py  trie.py
app/schemas/: response.py  user.py
app/static/: text.txt
app/trie_builder/: trie.py  update_trie.py
app/utils/: __init__.py  file_handler.py
